WIP update response model
