# runner/gateway.openapi.yaml
@@ -442,7 +442,7 @@ components:
           type: string
           format: binary
           title: Media File
-          description: Image to segment.
+          description: Media file to segment.
         model_id:
           type: string
           title: Model Id
@@ -581,11 +581,16 @@ components:
           type: string
           title: Logits
           description: The raw, unnormalized predictions (logits) for the masks.
+        video_segments:
+          allOf:
+          - $ref: '#/components/schemas/VideoSegmentResponse'
+          description: Response from video segmentation
       type: object
       required:
       - masks
       - scores
       - logits
+      - video_segments
       title: MasksResponse
       description: Response model for object segmentation.
     Media:
@@ -721,6 +726,32 @@ components:
       - images
       title: VideoResponse
       description: Response model for image generation.
+    VideoSegmentResponse:
+      properties:
+        frame_idx:
+          type: integer
+          title: Frame Idx
+          description: Index of the frame corresponding to this segmentation
+        obj_ids:
+          items:
+            type: integer
+          type: array
+          title: Obj Ids
+          description: list of ids of segmented objects in this frame
+        mask_logits:
+          items:
+            items:
+              type: number
+            type: array
+          type: array
+          title: Mask Logits
+          description: The generated masks.
+      type: object
+      required:
+      - frame_idx
+      - obj_ids
+      - mask_logits
+      title: VideoSegmentResponse
     chunk:
       properties:
         timestamp:
